// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-leave ezd-slide-up-leave-start ezd-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-cascader-dropdown-rtl ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus ezd-cascader-rtl"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 2`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-cascader-dropdown-rtl ezd-slide-up-leave ezd-slide-up-leave-start ezd-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus ezd-cascader-rtl"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 3`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-cascader-dropdown-rtl ezd-slide-up-leave ezd-slide-up-leave-start ezd-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus ezd-cascader-rtl"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
          data-value="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ezd-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue RTL 1`] = `
<div
  class="ezd-select ezd-cascader ezd-select-rtl ezd-select-single ezd-select-allow-clear ezd-select-show-arrow ezd-select-open"
>
  <div
    class="ezd-select-selector"
  >
    <span
      class="ezd-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ezd-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ezd-select-selection-item"
      title="Zhejiang / Hangzhou"
    >
      Zhejiang / Hangzhou
    </span>
  </div>
  <div>
    <div
      class="ezd-select-dropdown ezd-cascader-dropdown ezd-cascader-dropdown-rtl ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
      style="opacity: 0; pointer-events: none; min-width: auto;"
    >
      <div>
        <div
          class="ezd-cascader-menus ezd-cascader-rtl"
        >
          <ul
            class="ezd-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
              data-value="zhejiang"
              role="menuitemcheckbox"
              title="Zhejiang"
            >
              <div
                class="ezd-cascader-menu-item-content"
              >
                Zhejiang
              </div>
              <div
                class="ezd-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
            <li
              aria-checked="false"
              class="ezd-cascader-menu-item ezd-cascader-menu-item-expand"
              data-value="jiangsu"
              role="menuitemcheckbox"
              title="Jiangsu"
            >
              <div
                class="ezd-cascader-menu-item-content"
              >
                Jiangsu
              </div>
              <div
                class="ezd-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ezd-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="true"
              class="ezd-cascader-menu-item ezd-cascader-menu-item-expand ezd-cascader-menu-item-active"
              data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou"
              role="menuitemcheckbox"
              title="Hangzhou"
            >
              <div
                class="ezd-cascader-menu-item-content"
              >
                Hangzhou
              </div>
              <div
                class="ezd-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ezd-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ezd-cascader-menu-item"
              data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
              role="menuitemcheckbox"
              title="West Lake"
            >
              <div
                class="ezd-cascader-menu-item-content"
              >
                West Lake
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ezd-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ezd-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ezd-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-select ezd-cascader ezd-select-rtl ezd-select-single ezd-select-allow-clear ezd-select-show-arrow"
>
  <div
    class="ezd-select-selector"
  >
    <span
      class="ezd-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ezd-select-selection-search-input"
        readonly=""
        role="combobox"
        style="opacity:0"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ezd-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ezd-select-arrow"
    style="user-select:none;-webkit-user-select:none"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ezd-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="jiangsu__RC_CASCADER_SPLIT__nanjing__RC_CASCADER_SPLIT__zhonghuamen"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            Jiangsu / Nanjing / 
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              Z
            </span>
            hong Hua Men
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ezd-cascader-menus"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item"
          data-value="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__West Lake"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-disabled"
          data-value="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__Xia Sha"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ezd-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / Xia Sha
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should render not found content 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ezd-cascader-menus ezd-cascader-menu-empty"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-disabled"
          data-value="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            <div
              class="ezd-empty ezd-empty-normal ezd-empty-small"
            >
              <div
                class="ezd-empty-image"
              >
                <svg
                  class="ezd-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ezd-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ezd-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ezd-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ezd-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should show not found content when options.length is 0 1`] = `
<div
  class="ezd-select-dropdown ezd-cascader-dropdown ezd-select-dropdown-empty ezd-slide-up-appear ezd-slide-up-appear-prepare ezd-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ezd-cascader-menus ezd-cascader-menu-empty"
    >
      <ul
        class="ezd-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ezd-cascader-menu-item ezd-cascader-menu-item-disabled"
          data-value="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ezd-cascader-menu-item-content"
          >
            <div
              class="ezd-empty ezd-empty-normal ezd-empty-small"
            >
              <div
                class="ezd-empty-image"
              >
                <svg
                  class="ezd-empty-img-simple"
                  height="41"
                  viewBox="0 0 64 41"
                  width="64"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    transform="translate(0 1)"
                  >
                    <ellipse
                      class="ezd-empty-img-simple-ellipse"
                      cx="32"
                      cy="33"
                      rx="32"
                      ry="7"
                    />
                    <g
                      class="ezd-empty-img-simple-g"
                      fill-rule="nonzero"
                    >
                      <path
                        d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                      />
                      <path
                        class="ezd-empty-img-simple-path"
                        d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <div
                class="ezd-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div
  class="ezd-select ezd-cascader ezd-select-single ezd-select-allow-clear ezd-select-show-arrow"
>
  <div
    class="ezd-select-selector"
  >
    <span
      class="ezd-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ezd-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ezd-select-selection-item"
      title="Zhejiang / Hangzhou / West Lake"
    >
      Zhejiang / Hangzhou / West Lake
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ezd-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="down"
      class="anticon anticon-down ezd-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ezd-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
</div>
`;
